--- a/23.05.13.md
+++ b/23.05.13.md
@@ -1,4 +1,4 @@
-// 1. wypisz liczby od 0 do 23 za pomocą for, while i do-while
+<b>1. wypisz liczby od 0 do 23 za pomocą for, while i do-while</b><br><br>
 
 #include <stdio.h>
 
