--- a/23.05.13.md
+++ b/23.05.13.md
@@ -1,5 +1,5 @@
 <b>1. wypisz liczby od 0 do 23 za pomocą for, while i do-while</b><br><br>
-
+```c
 #include <stdio.h>
 
 int main(){
@@ -25,9 +25,10 @@ int main(){
   return 0;
 
 }
+```
 
-// 2. wypisz liczby od -3.5 do 7.5 z krokiem 0.5 za pomocą for i while
-
+<b> 2. wypisz liczby od -3.5 do 7.5 z krokiem 0.5 za pomocą for i while</b><br>
+```c
 #include <stdio.h>
 
 int main(){
@@ -45,9 +46,9 @@ int main(){
     
   return 0;
 }
-
-// 3. wczytaj n licz, wyswietl sume i srednia
-
+```
+<b> 3. wczytaj n licz, wyswietl sume i srednia</b><br>
+```c
 #include <stdio.h>
 
 int main(){
@@ -66,9 +67,10 @@ int main(){
   
   return 0;
 }
+```
 
-// Wypisz kwadraty i szesciany liczb od 1 do n
-
+<b> 4.Wypisz kwadraty i szesciany liczb od 1 do n</b><br>
+```c
 #include <stdio.h>
 
 
@@ -99,9 +101,10 @@ int main(){
   
   return 0;
 }
+```
 
-// Oblicz sume kwadratow liczb od 3 do 15.
-
+<b> 5.Oblicz sume kwadratow liczb od 3 do 15.</b><br>
+```c
 #include <stdio.h>
 
 int main(){
@@ -116,9 +119,10 @@ int main(){
   
   return 0;
 }
+```
 
-// 6. Wypisz sinusy i cosinusy katow 0, 30, 60, 90, 120, 150 i 180 stopni
-
+<b> 6. Wypisz sinusy i cosinusy katow 0, 30, 60, 90, 120, 150 i 180 stopni</b><br>
+```c
 #include <stdio.h>
 #include <math.h>
 
@@ -132,10 +136,11 @@ int main(){
   
   return 0;
 }
+```
 
-// 7. wypisz znaki od 'a' do 'k' z kodami ASCII (dziesiatkowymi i
-// szesnastkowymi) malejaco i rosnaca.
-
+<b> 7. wypisz znaki od 'a' do 'k' z kodami ASCII (dziesiatkowymi i
+ szesnastkowymi) malejaco i rosnaca.</b><br>
+```c
 #include <stdio.h>
 
 int main(){
@@ -153,9 +158,9 @@ int main(){
   return 0;
   
 }
-
-// Pętla wypisująca znaki podane przez użytkownika aż do napotkania 'x'.
-
+```
+<b> 8.Pętla wypisująca znaki podane przez użytkownika aż do napotkania 'x'.</b><br>
+```c
 #include <stdio.h>
 
 int main(){
@@ -168,9 +173,10 @@ int main(){
   
   return 0;
 }
+```
 
-// Taliczka mnozenia do 13.
-
+<b> Taliczka mnozenia do 13.</b><br>
+```c
 #include <stdio.h>
 
 int main(){
@@ -187,3 +193,4 @@ int main(){
   return 0;
   
 }
+```
