--- a/10.05.13.md
+++ b/10.05.13.md
@@ -1,3 +1,47 @@
+
+<b>Zad.2<b/><br>
+```c
+#include <stdio.h>
+#include <ctype.h>
+#include <string.h>
+int main() {
+	int i;
+	char napis []= " kotek" ;
+	for(i=0;i<strlen(napis);i++){
+		napis[i] = toupper (napis[i]);
+	}
+	puts (napis);
+	getchar();
+	return 0;
+}
+```
+<b>Zad.3<b/><br>
+```c
+#include <stdio.h>
+#include <math.h>
+int main(){
+	int dane [] = {-44,5,67,-2,0,33,77};
+	int i=0
+	int a, int znaleziono=0;
+	printf("Podaj liczbe \n" ,a);
+	scanf("%d",&a);
+	for(i=0;i<7;i++)
+	if(dane [i]==a){
+		znaleziono ++;
+	}
+	if(znaleziono >0){
+		printf ("liczba znajduje sie");
+	}
+	else{
+		printf("liczba nie znajduje sie");
+	}
+	
+	getchar();
+	getchar();
+	return 0;
+	
+}
+```
 <b>zad 5.<b/><br>
 ```c
 #include <stdio.h>
@@ -20,5 +64,101 @@ main()
 		getchar ();
 		getchar ();
 		return 0
+}
+```
+<b>Zad.6<b/><br>
+```c
+#include <stdio.h>
+int
+main()
+{
+	char tekst[ ]= "Tablica to podstawa programowania";
+	int rozmiar = sizeof(tekst)/sizeof(char),i,j=rozmiar-1;
+	char rewers[rozmiar];
+	for (i=0;i<rozmiar;i++,j--)
+	rewers[i]=tekst[j];
+	for(i=0;i<rozmiar;i++)
+	printf("%c",rewers[i]);
+	getchar();
+	return 0;
+}
+```
+<b>Zad7<b/><br>
+```c
+#include <stdio.h>
+#include<string.h>
+#define rozmiar 32
+void odKonca(char napis[]);
+int
+main()
+	char napis[rozmiar],c;
+	int i;
+	for(i=0;i<rozmiar;i++)
+	napis[i]='\0';
+	i=0
+	printf("wprowadz napis:");
+	while((c=getchar())!='\n')
+	{
+		napis[i]=c;
+		i++
+		}
+		napis[i]='\0';
+		printf("%s\n\n";napis);
+		odKonca(napis);
+		puts(napis);
+		getchar ();
+		return0;
+}
+```
+<b>zad.8<b/><br>
+```c
+min = max = dane[0];
+  for (i = 1; i < n; i++)
+    {
+      x = dane[i];#include <stdio.h>
+#define rozmiar 5
+
+struct minMax {
+       double min;
+       double max;
+       };
+
+struct minMax extr (double dane[], int n);    //Funkcja szukająca element największy i najmniejszy w tablicy
+
+int
+main ()
+{
+  double dane[rozmiar], x, min, max;
+  int i;
+  struct minMax mM;
+  for (i = 0; i < rozmiar; i++)
+    {
+      printf ("Wprowadz liczbe nr %d: ", i + 1);
+      scanf ("%lf", &x);
+      dane[i] = x;
+    }
+
+  for (i = 0; i < rozmiar; i++)
+    printf ("\nElemnt %d tablicy ma wartosc: %lf", i, dane[i]);
+mM = extr (dane, rozmiar);
+  printf ("\n\nElemnt najmniejszy to: %lf, a najwiekszy to: %lf.",mM.min, mM.max);
+  getchar ();
+  getchar ();
+  return 0;
+}
+
+struct minMax extr (double dane[], int n)
+{
+  int i;
+  double x, min, max;
+  struct minMax mM;
+      if (x <= min)
+        min = x;
+      if (x >= max)
+        max = x;
+    }
+  mM.min = min;
+  mM.max = max;
+  return mM;
 }
 ```
