--- a/10.05.13.md
+++ b/10.05.13.md
@@ -1,4 +1,3 @@
-
 <b>Zad.2<b/><br>
 ```c
 #include <stdio.h>
@@ -83,7 +82,7 @@ main()
 	return 0;
 }
 ```
-<b>Zad7<b/><br>
+<b>Zad.7<b/><br>
 ```c
 #include <stdio.h>
 #include<string.h>
